update documentation page

--- a/dokumentasi.html
+++ b/dokumentasi.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> -->
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <link rel="stylesheet" href="/assets/css/dokumentasi.css">
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
@@ -14,8 +14,8 @@
   </title>
 
   <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
+  <!-- <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> -->
   <!-- Nucleo Icons -->
   <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -36,9 +36,9 @@
       <a class="navbar-brand mr-lg-5" href="./index.html">
         <img src="./assets/img/logococonut.png">
       </a>
-      <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
+      <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
         title="Tooltip on top" data-container="body" data-animation="true"><a href=""
-          class="text-secondary">Dokumentasi</a></button>
+          class="text-secondary">Dokumentasi</a></button> -->
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
         aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,31 +52,29 @@
                 <img src="./assets/img/logococonut.png">
               </a>
             </div>
-
-
           </div>
         </div>
 
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://www.facebook.com/CreativeTim/" data-toggle="tooltip"
+            <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer" data-toggle="tooltip"
               title="Like us on Facebook">
               <i class="fa fa-facebook-square"></i>
               <span class="nav-link-inner--text d-lg-none">Facebook</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" data-toggle="tooltip"
+            <a class="nav-link nav-link-icon" href="https://www.instagram.com/coconutdotorg" data-toggle="tooltip"
               title="Follow us on Instagram">
               <i class="fa fa-instagram"></i>
               <span class="nav-link-inner--text d-lg-none">Instagram</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" data-toggle="tooltip"
-              title="Follow us on Twitter">
-              <i class="fa fa-twitter-square"></i>
-              <span class="nav-link-inner--text d-lg-none">Twitter</span>
+            <a class="nav-link nav-link-icon" href="https://youtube.com/@coconutcomputerclub3982" data-toggle="tooltip"
+              title="Follow us on youtube">
+              <i class="fa fa-youtube-square"></i>
+              <span class="nav-link-inner--text d-lg-none">youtube</span>
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -121,25 +119,46 @@
         <button class="btn btn-default filter-button" data-filter="5">BACTH 5</button>
 
       </div>
-      <br />
+      <br/>
 
       <!-- BATCH 1 -->
-      <!-- <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="" class="img-responsive">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/1.JPG" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="" class="img-responsive">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/2.JPG" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="" class="img-responsive">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/3.JPG" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="" class="img-responsive">
-      </div> -->
+        <img src="assets/img/dokumentasi/2024-2025/batch1/4.JPG" class="img-responsive">
+      </div>
 
+
+
+      <!-- BATCH 2 -->
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2024-2025/batch2/1.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2024-2025/batch2/2.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2024-2025/batch2/3.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2024-2025/batch2/4.JPG" class="img-responsive">
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2024-2025/batch2/5.JPG" class="img-responsive">
+      </div>
     </div>
   </div>
   </section>
@@ -150,26 +169,28 @@
       <div class="row row-grid align-items-center my-md">
         <div class="col-lg-6">
           <h3 class="text-primary font-weight-light mb-2">COCONUT OPEN CLASS</h3>
-          <h5 class="mb-0 font-weight-light"><b><i>"Mencerdaskan Kehidupan Bangsa"</i></b><br>Membuka Pengetahuan,
+          <h5 class="mb-0 font-weight-light"><b><i>"Mencerdaskan Kehidupan Bangsa"</i></b><br>Membuka
+            Pengetahuan,
             Menghubungkan Pikiran.</h5>
         </div>
         <div class="col-lg-6 text-lg-center btn-wrapper">
-          <button href="https://twitter.com/creativetim" rel="nofollow"
-            class="btn btn-icon-only btn-twitter rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
-            <span class="btn-inner--icon"><i class="fa fa-twitter"></i></span>
+          <button rel="nofollow" class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip"
+            data-original-title="Subscribe us">
+            <a href="https://youtube.com/@coconutcomputerclub3982">
+              <span class="btn-inner--icon"><i class="fa fa-youtube" style="color: white;"></i></span>
+            </a>
           </button>
-          <button href="https://www.facebook.com/CreativeTim/" rel="nofollow"
-            class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip" data-original-title="Like us">
-            <span class="btn-inner--icon"><i class="fab fa-facebook"></i></span>
+          <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
+            data-original-title="Like us">
+            <a href="https://www.facebook.com/coconutcomputer">
+              <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+            </a>
           </button>
-          <button href="https://dribbble.com/creativetim" rel="nofollow"
-            class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
-            <span class="btn-inner--icon"><i class="fa fa-dribbble"></i></span>
-          </button>
-          <button href="https://github.com/creativetimofficial" rel="nofollow"
-            class="btn btn-icon-only btn-github rounded-circle" data-toggle="tooltip"
-            data-original-title="Star on Github">
-            <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
+          <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
+            data-original-title="Follow us">
+            <a href="https://coconut.or.id">
+              <span class="btn-inner--icon"><i class="fa fa-chrome" style="color: white;"></i></span>
+            </a>
           </button>
         </div>
       </div>
@@ -177,19 +198,16 @@
       <div class="row align-items-center justify-content-md-between">
         <div class="col-md-6">
           <div class="copyright">
-            &copy; 2024 <a href="">COCONUT Computer Club</a>.
+            &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
           </div>
         </div>
         <div class="col-md-6">
           <ul class="nav nav-footer justify-content-end">
             <li class="nav-item">
-              <a href="" class="nav-link">COCONUT Computer Club</a>
+              <a href="https://coconut.or.id" class="nav-link">About Us</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Blog</a>
+              <a href="https://coconut.or.id/blog" class="nav-link">Blog</a>
             </li>
           </ul>
         </div>
@@ -246,7 +264,7 @@
 <script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
 <!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
 <!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
 <script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
 <script src="assets/js/script.js"></script>
 <script>
@@ -259,47 +277,5 @@
     }
   }
 </script>
-<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
-<script>
-  window.onload = function () {
-    const apiUrl = "https://coconutopenclass.pythonanywhere.com/api/bphlist";
-    fetch(apiUrl)
-      .then(response => {
-        if (!response.ok) {
-          throw new Error("Gagal mengambil data");
-        }
-        return response.json();
-      })
-      .then(data => {
-        const rowimg = document.getElementById("img-row");
-        data.forEach(element => {
-          const newElement = document.createElement('div');
-          newElement.className = 'col-sm-3 col-6 mt-sm-0';
-
-          newElement.innerHTML = `
-            <small class="d-block text-uppercase font-weight-bold">${element[0]}</small>
-            <small class="mb-2">${element[3]}</small><br>
-            <a href="examples/profile.html?nra=${element[2]}">
-              <img src="${element[1]}" alt="Circle image" class="img-fluid rounded shadow-lg bulat" style="width: 150px; height: 150px;">
-            </a>
-            <button type="button" class="btn btn-sm btn-success btn-tooltip mb-4 kontak" data-toggle="tooltip" data-placement="top" title="" data-container="body" data-animation="true" data-original-title="Kirimkan Pesan Melalui What's App">Hubungi</button>
-          `;
-          rowimg.appendChild(newElement);
-          console.log(element);
-        });
-
-        // Menambahkan HTML ke dalam elemen baru
-
-      })
-      .catch(error => {
-        console.error("Terjadi kesalahan baru");
-      })
-  }
-  // window.TrackJS &&
-  //   TrackJS.install({
-  //     token: "ee6fab19c5a04ac1a32a645abde4613a",
-  //     application: "argon-design-system-pro"
-  //   });
-</script>
-
+<!-- <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script> -->
 </html>
