--- a/formulir.html
+++ b/formulir.html
@@ -20,8 +20,6 @@
     <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- CSS Files -->
     <link href="./assets/css/argon-design-system.css?v=1.2.2" rel="stylesheet" />
-
-    </style>
 </head>
 
 <body class="index-page">
@@ -32,6 +30,10 @@
             <a class="navbar-brand mr-lg-5" href="./index.html">
                 <img src="./assets/img/logococonut.png">
             </a>
+            <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
+        title="Tooltip on top" data-container="body" data-animation="true"><a href=""
+          class="text-secondary">Dokumentasi</a></button> -->
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
                 aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,36 +46,50 @@
                                 <img src="./assets/img/logococonut.png">
                             </a>
                         </div>
-                        <div class="col-6 collapse-close">
-                            <button type="button" class="navbar-toggler" data-toggle="collapse"
-                                data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span></span>
-                                <span></span>
-                            </button>
-                        </div>
                     </div>
                 </div>
 
                 <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Like us on Facebook">
+                        <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer"
+                            data-toggle="tooltip" title="Like us on Facebook">
                             <i class="fa fa-facebook-square"></i>
                             <span class="nav-link-inner--text d-lg-none">Facebook</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Follow us on Instagram">
+                        <a class="nav-link nav-link-icon" href="https://www.instagram.com/coconutdotorg"
+                            data-toggle="tooltip" title="Follow us on Instagram">
                             <i class="fa fa-instagram"></i>
                             <span class="nav-link-inner--text d-lg-none">Instagram</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Follow us on Twitter">
-                            <i class="fa fa-twitter-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Twitter</span>
+                        <a class="nav-link nav-link-icon" href="https://youtube.com/@coconutcomputerclub3982"
+                            data-toggle="tooltip" title="Follow us on youtube">
+                            <i class="fa fa-youtube-square"></i>
+                            <span class="nav-link-inner--text d-lg-none">youtube</span>
                         </a>
                     </li>
+                    <!-- <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial/argon-design-system" data-toggle="tooltip" title="Star us on Github">
+              <i class="fa fa-github"></i>
+              <span class="nav-link-inner--text d-lg-none">Github</span>
+            </a>
+          </li> -->
+                    <!-- <li class="nav-item">
+            <a class="btn btn-outline-primary" href="https://www.creative-tim.com/builder/argon">
+              <span class="nav-link-inner--text">Online Builder</span>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a href="https://www.creative-tim.com/product/argon-design-system-pro?ref=ads-upgrade-pro" class="btn btn-primary btn-icon">
+              <span class="btn-inner--icon">
+                <i class="fa fa-shopping-cart"></i>
+              </span>
+              <span class="nav-link-inner--text">Upgrade to PRO</span>
+            </a>
+          </li> -->
                 </ul>
             </div>
         </div>
@@ -287,8 +303,8 @@
                                     <div class="form-group mb-3">
                                         <div class="input-group input-group-alternative">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="buktitf"
-                                                    name="file" accept=".jpeg, .jpg, .png">
+                                                <input type="file" class="custom-file-input" id="buktitf" name="file"
+                                                    accept=".jpeg, .jpg, .png">
                                                 <label class="custom-file-label" for="gambarInput">Upload Bukti
                                                     Transfer</label>
                                             </div>
@@ -320,24 +336,28 @@
             <div class="row row-grid align-items-center my-md">
                 <div class="col-lg-6">
                     <h3 class="text-primary font-weight-light mb-2">COCONUT OPEN CLASS</h3>
-                    <h5 class="mb-0 font-weight-light">Membuka Pengetahuan, Menghubungkan Pikiran.</h5>
+                    <h5 class="mb-0 font-weight-light"><b><i>"Mencerdaskan Kehidupan Bangsa"</i></b><br>Membuka
+                        Pengetahuan,
+                        Menghubungkan Pikiran.</h5>
                 </div>
                 <div class="col-lg-6 text-lg-center btn-wrapper">
-
-                    <button href="https://web.facebook.com/coconutcomputer" rel="nofollow"
-                        class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
+                    <button rel="nofollow" class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip"
+                        data-original-title="Subscribe us">
+                        <a href="https://youtube.com/@coconutcomputerclub3982">
+                            <span class="btn-inner--icon"><i class="fa fa-youtube" style="color: white;"></i></span>
+                        </a>
+                    </button>
+                    <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
                         data-original-title="Like us">
-                        <span class="btn-inner--icon"><i class="fab fa-facebook"></i></span>
+                        <a href="https://www.facebook.com/coconutcomputer">
+                            <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                        </a>
                     </button>
-                    <button href="https://www.instagram.com/coconuts/" rel="nofollow"
-                        class="btn btn-icon-only btn-instagram rounded-circle" data-toggle="tooltip"
+                    <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
                         data-original-title="Follow us">
-                        <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
-                    </button>
-                    <button href="https://coconut.or.id/" rel="nofollow"
-                        class="btn btn-icon-only btn-link rounded-circle" data-toggle="tooltip"
-                        data-original-title="Star on Github">
-                        <span class="btn-inner--icon"><i class="fa fa-link"></i></span>
+                        <a href="https://coconut.or.id">
+                            <span class="btn-inner--icon"><i class="fa fa-chrome" style="color: white;"></i></span>
+                        </a>
                     </button>
                 </div>
             </div>
@@ -345,19 +365,16 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2024 <a href="https://coconut.or.id/" class="disabled">COCONUT Computer Club</a>
+                        &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
                     </div>
                 </div>
                 <div class="col-md-6">
                     <ul class="nav nav-footer justify-content-end">
                         <li class="nav-item">
-                            <a href="https://coconut.or.id/" class="nav-link disabled">COCONUT Computer Club</a>
+                            <a href="https://coconut.or.id" class="nav-link">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link disabled">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://coconut.or.id/" class="nav-link disabled">Blog</a>
+                            <a href="https://coconut.or.id/blog" class="nav-link">Blog</a>
                         </li>
                     </ul>
                 </div>
