--- a/pendaftar.html
+++ b/pendaftar.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         COCONUT OPEN CLASS
     </title>
     <!--     Fonts and icons     -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
-    <!-- <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <!-- Nucleo Icons -->
-    <link href="/assets/css/nucleo-icons.css" rel="stylesheet" />
-    <link href="/assets/css/nucleo-svg.css" rel="stylesheet" />
+    <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- Font Awesome Icons -->
-    <link href="/assets/css/font-awesome.css" rel="stylesheet" />
-    <link href="/assets/css/nucleo-svg.css" rel="stylesheet" />
+    <link href="./assets/css/font-awesome.css" rel="stylesheet" />
+    <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- CSS Files -->
-    <link href="/assets/css/argon-design-system.css?v=1.2.2" rel="stylesheet" />
+    <link href="./assets/css/argon-design-system.css?v=1.2.2" rel="stylesheet" />
 </head>
 
 <body class="index-page">
@@ -27,9 +27,13 @@
     <nav id="navbar-main"
         class="navbar navbar-main navbar-expand-lg bg-white navbar-light position-sticky top-0 shadow py-2">
         <div class="container">
-            <a class="navbar-brand mr-lg-5" href="/index.html">
-                <img src="/assets/img/logococonut.png">
+            <a class="navbar-brand mr-lg-5" href="./index.html">
+                <img src="./assets/img/logococonut.png">
             </a>
+            <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
+        title="Tooltip on top" data-container="body" data-animation="true"><a href=""
+          class="text-secondary">Dokumentasi</a></button> -->
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
                 aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,40 +42,54 @@
                 <div class="navbar-collapse-header">
                     <div class="row">
                         <div class="col-6 collapse-brand">
-                            <a href="/index.html">
-                                <img src="/assets/img/logococonut.png">
+                            <a href="./index.html">
+                                <img src="./assets/img/logococonut.png">
                             </a>
-                        </div>
-                        <div class="col-6 collapse-close">
-                            <button type="button" class="navbar-toggler" data-toggle="collapse"
-                                data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span></span>
-                                <span></span>
-                            </button>
                         </div>
                     </div>
                 </div>
 
                 <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Like us on Facebook">
+                        <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer"
+                            data-toggle="tooltip" title="Like us on Facebook">
                             <i class="fa fa-facebook-square"></i>
                             <span class="nav-link-inner--text d-lg-none">Facebook</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Follow us on Instagram">
+                        <a class="nav-link nav-link-icon" href="https://www.instagram.com/coconutdotorg"
+                            data-toggle="tooltip" title="Follow us on Instagram">
                             <i class="fa fa-instagram"></i>
                             <span class="nav-link-inner--text d-lg-none">Instagram</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" data-toggle="tooltip" title="Follow us on Twitter">
-                            <i class="fa fa-twitter-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Twitter</span>
+                        <a class="nav-link nav-link-icon" href="https://youtube.com/@coconutcomputerclub3982"
+                            data-toggle="tooltip" title="Follow us on youtube">
+                            <i class="fa fa-youtube-square"></i>
+                            <span class="nav-link-inner--text d-lg-none">youtube</span>
                         </a>
                     </li>
+                    <!-- <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial/argon-design-system" data-toggle="tooltip" title="Star us on Github">
+              <i class="fa fa-github"></i>
+              <span class="nav-link-inner--text d-lg-none">Github</span>
+            </a>
+          </li> -->
+                    <!-- <li class="nav-item">
+            <a class="btn btn-outline-primary" href="https://www.creative-tim.com/builder/argon">
+              <span class="nav-link-inner--text">Online Builder</span>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a href="https://www.creative-tim.com/product/argon-design-system-pro?ref=ads-upgrade-pro" class="btn btn-primary btn-icon">
+              <span class="btn-inner--icon">
+                <i class="fa fa-shopping-cart"></i>
+              </span>
+              <span class="nav-link-inner--text">Upgrade to PRO</span>
+            </a>
+          </li> -->
                 </ul>
             </div>
         </div>
@@ -89,7 +107,8 @@
                             data-placement="top" title="" data-container="body" data-animation="true"
                             data-original-title="Pendaftaran Berakhir pada Sabtu, 3 February 2024">COCONUT OPEN CLASS
                             BATCH 1</button>
-                        <h3 class=" text-white"><span class="text-white display-4">Introduction to Sveltekit: The frontend framework of the future</span></h3>
+                        <h3 class=" text-white"><span class="text-white display-4">Introduction to Sveltekit: The
+                                frontend framework of the future</span></h3>
                         <!-- <small class="text-uppercase font-weight-bold">Informasi!</small> -->
                     </div>
                     <div class="nav-wrapper">
@@ -113,8 +132,10 @@
                                     aria-labelledby="tabs-icons-text-1-tab">
                                     <div class="description" id="data-pendaftar">
                                         <div class="d-flex justify-content-between mb-3">
-                                            <p class="txt-biru mb-0">Jumlah Pendaftar <b><a id="jumlah"></a> Orang</b></p>
-                                            <a href="https://pendaftaran-coc-api-production.up.railway.app/api/pendaftar/database/pendaftar.db" class="btn btn-sm btn-primary me-3" download="backup-pendaftaran.db">
+                                            <p class="txt-biru mb-0">Jumlah Pendaftar <b><a id="jumlah"></a> Orang</b>
+                                            </p>
+                                            <a href="https://pendaftaran-coc-api-production.up.railway.app/api/pendaftar/database/pendaftar.db"
+                                                class="btn btn-sm btn-primary me-3" download="backup-pendaftaran.db">
                                                 <i class="ni ni-cloud-download-95 me-2"></i> Download Backup Database
                                             </a>
                                         </div>
@@ -191,30 +212,34 @@
             </svg>
         </div>
     </section>
-    
+
     <footer class="footer has-cards">
         <div class="container">
             <div class="row row-grid align-items-center my-md">
                 <div class="col-lg-6">
                     <h3 class="text-primary font-weight-light mb-2">COCONUT OPEN CLASS</h3>
-                    <h5 class="mb-0 font-weight-light">Membuka Pengetahuan, Menghubungkan Pikiran.</h5>
+                    <h5 class="mb-0 font-weight-light"><b><i>"Mencerdaskan Kehidupan Bangsa"</i></b><br>Membuka
+                        Pengetahuan,
+                        Menghubungkan Pikiran.</h5>
                 </div>
                 <div class="col-lg-6 text-lg-center btn-wrapper">
-
-                    <button href="https://web.facebook.com/coconutcomputer" rel="nofollow"
-                        class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
+                    <button rel="nofollow" class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip"
+                        data-original-title="Subscribe us">
+                        <a href="https://youtube.com/@coconutcomputerclub3982">
+                            <span class="btn-inner--icon"><i class="fa fa-youtube" style="color: white;"></i></span>
+                        </a>
+                    </button>
+                    <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
                         data-original-title="Like us">
-                        <span class="btn-inner--icon"><i class="fab fa-facebook"></i></span>
+                        <a href="https://www.facebook.com/coconutcomputer">
+                            <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                        </a>
                     </button>
-                    <button href="https://www.instagram.com/coconuts/" rel="nofollow"
-                        class="btn btn-icon-only btn-instagram rounded-circle" data-toggle="tooltip"
+                    <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
                         data-original-title="Follow us">
-                        <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
-                    </button>
-                    <button href="https://coconut.or.id/" rel="nofollow"
-                        class="btn btn-icon-only btn-link rounded-circle" data-toggle="tooltip"
-                        data-original-title="Star on Github">
-                        <span class="btn-inner--icon"><i class="fa fa-link"></i></span>
+                        <a href="https://coconut.or.id">
+                            <span class="btn-inner--icon"><i class="fa fa-chrome" style="color: white;"></i></span>
+                        </a>
                     </button>
                 </div>
             </div>
@@ -222,19 +247,16 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2024 <a href="https://coconut.or.id/" class="disabled">COCONUT Computer Club</a>.
+                        &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
                     </div>
                 </div>
                 <div class="col-md-6">
                     <ul class="nav nav-footer justify-content-end">
                         <li class="nav-item">
-                            <a href="https://coconut.or.id/" class="nav-link disabled">COCONUT Computer Club</a>
+                            <a href="https://coconut.or.id" class="nav-link">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link disabled">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://coconut.or.id/" class="nav-link disabled">Blog</a>
+                            <a href="https://coconut.or.id/blog" class="nav-link">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -243,21 +265,21 @@
     </footer>
 </body>
 <!--   Core JS Files   -->
-<script src="/assets/js/core/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+<script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+<script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="/assets/js/plugins/bootstrap-switch.js"></script>
+<script src="./assets/js/plugins/bootstrap-switch.js"></script>
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-<script src="/assets/js/plugins/moment.min.js"></script>
-<script src="/assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
-<script src="/assets/js/plugins/bootstrap-datepicker.min.js"></script>
+<script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<script src="./assets/js/plugins/moment.min.js"></script>
+<script src="./assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
+<script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
 <!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
 <!--  Google Maps Plugin    -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
-<script src="/assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
+<script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
 <script>
     function scrollToDownload() {
 
@@ -270,4 +292,5 @@
 </script>
 <!-- <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script> -->
 <script src="/assets/js/pendaftar.js"></script>
+
 </html>
