--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     COCONUT OPEN CLASS
   </title>
   <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
+  <!-- <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> -->
   <!-- Nucleo Icons -->
   <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -51,24 +51,24 @@
 
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://www.facebook.com/CreativeTim/" data-toggle="tooltip"
+            <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer" data-toggle="tooltip"
               title="Like us on Facebook">
               <i class="fa fa-facebook-square"></i>
               <span class="nav-link-inner--text d-lg-none">Facebook</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" data-toggle="tooltip"
+            <a class="nav-link nav-link-icon" href="https://www.instagram.com/coconutdotorg" data-toggle="tooltip"
               title="Follow us on Instagram">
               <i class="fa fa-instagram"></i>
               <span class="nav-link-inner--text d-lg-none">Instagram</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" data-toggle="tooltip"
-              title="Follow us on Twitter">
-              <i class="fa fa-twitter-square"></i>
-              <span class="nav-link-inner--text d-lg-none">Twitter</span>
+            <a class="nav-link nav-link-icon" href="https://youtube.com/@coconutcomputerclub3982" data-toggle="tooltip"
+              title="Follow us on youtube">
+              <i class="fa fa-youtube-square"></i>
+              <span class="nav-link-inner--text d-lg-none">youtube</span>
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -117,10 +117,10 @@
                 <img src="./assets/img/logo.png" style="width: 120px;" class="img-fluid">
                 <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 1<br><br><sup>Introduction to Sveltekit: The frontend framework of the future</sup></p>
                 <div class="btn-wrapper mt-2">
-                  <!-- <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
+                  <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="ni ni-image"></i></span>
                     <span class="btn-inner--text">Lihat Dokumentasi</span>
-                  </a> -->
+                  </a>
 
                   <a href="./formulir.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="ni ni-single-copy-04"></i></span>
@@ -246,6 +246,13 @@
               </a>
             </div>
           </div>
+          <div class="col-md-6 mt-5 mb-lg-0">
+            <div class="card card-lift--hover shadow border-0">
+              <a href="#" title="Profile Page">
+                <img src="./assets/img/coc 2024-2025/Coc2.jpg" class="card-img">
+              </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="container">
@@ -256,24 +263,25 @@
               Menghubungkan Pikiran.</h5>
           </div>
           <div class="col-lg-6 text-lg-center btn-wrapper">
-            <button href="https://twitter.com/creativetim" rel="nofollow"
-              class="btn btn-icon-only btn-twitter rounded-circle" data-toggle="tooltip"
-              data-original-title="Follow us">
-              <span class="btn-inner--icon"><i class="fa fa-twitter"></i></span>
+            <button rel="nofollow"
+              class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip"
+              data-original-title="Subscribe us">
+              <a href="https://youtube.com/@coconutcomputerclub3982">
+                <span class="btn-inner--icon"><i class="fa fa-youtube" style="color: white;"></i></span>
+              </a>
             </button>
-            <button href="https://www.facebook.com/CreativeTim/" rel="nofollow"
+            <button rel="nofollow"
               class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip" data-original-title="Like us">
-              <span class="btn-inner--icon"><i class="fab fa-facebook"></i></span>
+              <a href="https://www.facebook.com/coconutcomputer">
+                <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+              </a>
             </button>
-            <button href="https://dribbble.com/creativetim" rel="nofollow"
+            <button rel="nofollow"
               class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
               data-original-title="Follow us">
-              <span class="btn-inner--icon"><i class="fa fa-dribbble"></i></span>
-            </button>
-            <button href="https://github.com/creativetimofficial" rel="nofollow"
-              class="btn btn-icon-only btn-github rounded-circle" data-toggle="tooltip"
-              data-original-title="Star on Github">
-              <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
+              <a href="https://coconut.or.id">
+                <span class="btn-inner--icon"><i class="fa fa-chrome" style="color: white;"></i></span>
+              </a>
             </button>
           </div>
         </div>
@@ -281,19 +289,16 @@
         <div class="row align-items-center justify-content-md-between">
           <div class="col-md-6">
             <div class="copyright">
-              &copy; 2024 <a href="">COCONUT Computer Club</a>.
+              &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
             </div>
           </div>
           <div class="col-md-6">
             <ul class="nav nav-footer justify-content-end">
               <li class="nav-item">
-                <a href="" class="nav-link">COCONUT Computer Club</a>
+                <a href="https://coconut.or.id" class="nav-link">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="" class="nav-link">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Blog</a>
+                <a href="https://coconut.or.id/blog" class="nav-link">Blog</a>
               </li>
             </ul>
           </div>
@@ -315,7 +320,7 @@
 <script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
 <!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
 <!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
 <script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
 <script src="assets/js/script.js"></script>
 <script>
@@ -328,42 +333,5 @@
     }
   }
 </script>
-<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
-<script>
-  window.onload = function () {
-    const apiUrl = "https://coconutopenclass.pythonanywhere.com/api/bphlist";
-    fetch(apiUrl)
-      .then(response => {
-        if (!response.ok) {
-          throw new Error("Gagal mengambil data");
-        }
-        return response.json();
-      })
-      .then(data => {
-        const rowimg = document.getElementById("img-row");
-        data.forEach(element => {
-          const newElement = document.createElement('div');
-          newElement.className = 'col-sm-3 col-6 mt-sm-0';
-
-          newElement.innerHTML = `
-            <small class="d-block text-uppercase font-weight-bold">${element[0]}</small>
-            <small class="mb-2">${element[3]}</small><br>
-            <a href="examples/profile.html?nra=${element[2]}">
-              <img src="${element[1]}" alt="Circle image" class="img-fluid rounded shadow-lg bulat" style="width: 150px; height: 150px;">
-            </a>
-            <button type="button" class="btn btn-sm btn-success btn-tooltip mb-4 kontak" data-toggle="tooltip" data-placement="top" title="" data-container="body" data-animation="true" data-original-title="Kirimkan Pesan Melalui What's App">Hubungi</button>
-          `;
-          rowimg.appendChild(newElement);
-          console.log(element);
-        });
-
-        // Menambahkan HTML ke dalam elemen baru
-
-      })
-      .catch(error => {
-        console.error("Terjadi kesalahan baru");
-      })
-  }
-</script>
-
+<!-- <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script> -->
 </html>
