--- a/login.html
+++ b/login.html
@@ -2,23 +2,92 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="author" content="Muhamad Nauval Azhar">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="This is a login page template based on Bootstrap 5">
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        COCONUT OPEN CLASS
+    </title>
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- Nucleo Icons -->
+    <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <link href="./assets/css/font-awesome.css" rel="stylesheet" />
+    <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- CSS Files -->
+    <link href="./assets/css/argon-design-system.css?v=1.2.2" rel="stylesheet" />
 </head>
 
 <body>
+    <nav id="navbar-main"
+        class="navbar navbar-main navbar-expand-lg bg-white navbar-light position-sticky top-0 shadow py-2">
+        <div class="container">
+            <a class="navbar-brand mr-lg-5" href="./index.html">
+                <img src="./assets/img/logococonut.png">
+            </a>
+            <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
+        title="Tooltip on top" data-container="body" data-animation="true"><a href=""
+          class="text-secondary">Dokumentasi</a></button> -->
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
+                aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbar_global">
+                <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer"
+                            data-toggle="tooltip" title="Like us on Facebook">
+                            <i class="fa fa-facebook-square"></i>
+                            <span class="nav-link-inner--text d-lg-none">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-icon" href="https://www.instagram.com/coconutdotorg"
+                            data-toggle="tooltip" title="Follow us on Instagram">
+                            <i class="fa fa-instagram"></i>
+                            <span class="nav-link-inner--text d-lg-none">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-icon" href="https://youtube.com/@coconutcomputerclub3982"
+                            data-toggle="tooltip" title="Follow us on youtube">
+                            <i class="fa fa-youtube-square"></i>
+                            <span class="nav-link-inner--text d-lg-none">youtube</span>
+                        </a>
+                    </li>
+                    <!-- <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial/argon-design-system" data-toggle="tooltip" title="Star us on Github">
+              <i class="fa fa-github"></i>
+              <span class="nav-link-inner--text d-lg-none">Github</span>
+            </a>
+          </li> -->
+                    <!-- <li class="nav-item">
+            <a class="btn btn-outline-primary" href="https://www.creative-tim.com/builder/argon">
+              <span class="nav-link-inner--text">Online Builder</span>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a href="https://www.creative-tim.com/product/argon-design-system-pro?ref=ads-upgrade-pro" class="btn btn-primary btn-icon">
+              <span class="btn-inner--icon">
+                <i class="fa fa-shopping-cart"></i>
+              </span>
+              <span class="nav-link-inner--text">Upgrade to PRO</span>
+            </a>
+          </li> -->
+                </ul>
+            </div>
+        </div>
+    </nav>
     <section class="h-100">
         <div class="container h-100">
             <div class="row justify-content-sm-center h-100">
                 <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
-                    <div class="text-center my-5">
-                        <img src="assets/img/logococonut.png" alt="logo" width="100">
-                    </div>
+                    <div class="text-center my-5"></div>
                     <div class="card shadow-lg">
                         <div class="card-body p-5">
                             <h1 class="fs-4 card-title fw-bold mb-4">Login</h1>
@@ -52,14 +121,76 @@
                             </form>
                         </div>
                     </div>
-                    <div class="text-center mt-5 text-muted">
-                        Copyright &copy; COCONUT Computer Club
-                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="footer has-cards">
+        <div class="container">
+            <div class="row row-grid align-items-center my-md">
+                <div class="col-lg-6">
+                    <h3 class="text-primary font-weight-light mb-2">COCONUT OPEN CLASS</h3>
+                    <h5 class="mb-0 font-weight-light"><b><i>"Mencerdaskan Kehidupan Bangsa"</i></b><br>Membuka
+                        Pengetahuan,
+                        Menghubungkan Pikiran.</h5>
+                </div>
+                <div class="col-lg-6 text-lg-center btn-wrapper">
+                    <button rel="nofollow" class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip"
+                        data-original-title="Subscribe us">
+                        <a href="https://youtube.com/@coconutcomputerclub3982">
+                            <span class="btn-inner--icon"><i class="fa fa-youtube" style="color: white;"></i></span>
+                        </a>
+                    </button>
+                    <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
+                        data-original-title="Like us">
+                        <a href="https://www.facebook.com/coconutcomputer">
+                            <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                        </a>
+                    </button>
+                    <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
+                        data-original-title="Follow us">
+                        <a href="https://coconut.or.id">
+                            <span class="btn-inner--icon"><i class="fa fa-chrome" style="color: white;"></i></span>
+                        </a>
+                    </button>
+                </div>
+            </div>
+            <hr>
+            <div class="row align-items-center justify-content-md-between">
+                <div class="col-md-6">
+                    <div class="copyright">
+                        &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <ul class="nav nav-footer justify-content-end">
+                        <li class="nav-item">
+                            <a href="https://coconut.or.id" class="nav-link">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://coconut.or.id/blog" class="nav-link">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+    <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+    <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+    <script src="./assets/js/plugins/bootstrap-switch.js"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <script src="./assets/js/plugins/moment.min.js"></script>
+    <script src="./assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
+    <script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
+    <!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
+    <!--  Google Maps Plugin    -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
+    <script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
     <script src="assets/js/login.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
